[tool.poetry]
name = "astrolibrary"
description = "A set of APIs to analyze and predict space objects"
version = "0.1.0"
packages = [ { include = "astrolibrary" } ]
authors = ["spacemap Developers"]
maintainers = ["spacemap <contact@spacemap42.com>"]
readme = "README.md"
include = ["astrolibrary/config.ini"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.3.0"
requests = "^2.28.2"
configparser = "^5.3.0"
datetime = "^5.1"

[tool.black]
line-length = 88