[tool.poetry]
name = "astrolibrary"
description = "A set of APIs to analyze and predict space objects"
version = "0.1.1"
packages = [ { include = "astrolibrary" } ]
authors = ["spacemap Developers"]
maintainers = ["spacemap <contact@spacemap42.com>"]
readme = "README.md"
include = ["astrolibrary/config.ini"]
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
black = "^23.3.0"
requests = "^2.28.2"
configparser = "^5.3.0"
matplotlib = "^3.7.1"
sgp4 = "^2.21"
numpy = "^1.24.2"
pyside6 = "^6.5.0"
pyopengl = "^3.1.6"

[tool.black]
line-length = 88