[tool.poetry]
name = "astrolibrary"
description = "A set of APIs to analyze and predict space objects"
version = "0.1.4"
packages = [ { include = "astrolibrary" } ]
authors = ["spacemap Developers"]
maintainers = ["spacemap <contact@spacemap42.com>"]
readme = "README.md"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
black = "^23.7.0"
requests = "^2.31.0"
configparser = "^5.3.0"
matplotlib = "^3.7.2"
poetry = "^1.5.1"
numpy = "^1.25.2"
sgp4 = "^2.22"

[tool.black]
line-length = 88